el front del proyecto

--- a/templates/index.html
+++ b/templates/index.html
@@ -62,6 +62,10 @@
         <button type="button" class="btn btn-dark" onclick="CargarNotebook('evaluacion_resultados')">Evaluación de resultados</button>
         <button type="button" class="btn btn-custom-orange" onclick="CargarNotebook('transformadores_pipelines')">Creación de transformadores y pipelines personalizados</button>
 
+        <button type="button" class="btn btn-custom-orange" onclick="CargarNotebook('SVM')">Maquina de Soporte Vectorial</button>
+        <button type="button" class="btn btn-custom-info" onclick="CargarNotebook('Arboles')">Arboles de Decision</button>
+        <button type="button" class="btn btn-custom-warning" onclick="CargarNotebook('Proyecto')">Proyecto Regresion LOGISTICA </button>
+        
     </div>
     
 
